			SWI-Prolog ChangeLog
			====================

  * FIXED: $qlf_info/4 to request information on QLF files.  Also turned
    a couple of common warnings into proper exceptions.

  * FIXED: Avoid the usage of the appearently badly supported Win32 function
    GetFileInformationByHandle(), now using GetFileSize().  This fixes some
    false-alarm about not being able to find the system resources.

  * REMOVED: ed/1, also from the backward compatibility module.  Edit/1
    is the generic editing front-end.

  * FIXED: writeq(a(b,c,(d,e))), reported by Joachim Katzer.

  * FIXED: Memory leak in expand_file_name/2.  Reported by Daniel Cote.

  * FIXED: Print error-locations in files holding the ~-character.
    Thanks to Mike Maxwell.

VERSION 4.0.1
=============

  * PACKAGE: Many installation patches, added libraries, notably to
    the XPCE subsystem.

  * ADDED: Skeleton dotfiles for both Prolog and XPCE to the dotfiles
    directory.

  * FIXED: plrc utility for modifying archives.  Thanks to Lourens
    van der Meij.

  * FIXED: ANSI-C incompatibility, breaking compilation using AIX cc
    (Sterling Smith).

  * FIXED: end_of_file issues in readln/[1,2,5] (library(readln)) and
    modernised the code a bit.

  * FIXED: Write out-of-range floating point numbers properly (Bart Demoen).

VERSION 4.0.0
=============

  * ADDED: Integrated generally useful packages and the now Open source
    XPCE GUI toolkit into the source and binary distribution.

  * ADDED: Integrated NMAKE makefiles for building on MS-Windows.  Requires
    Windows-NT or 2000 to build, but result works on all Win32 platforms.

  * FIXED: Instantiation problems in source_file/2, reported by
    Richard O'Keefe.

  * FIXED/MODIFIED: DDE Server (Windows) returns data as atom instead of
    list of character codes.  It treads the data as a 0-terminated string.


VERSION 3.4.5
=============

  * FIXED: missing ports in the tracer when the choicepoint is pruned by
    a cut.
