@@ -592,6 +592,9 @@ point number.
     \predicate{compound}{1}{+Term}
 Succeeds if \arg{Term} is bound to a compound term.  See also functor/3
 and =../2.
+    \predicate{callable}{1}{+Term}
+Succeeds if \arg{Term} is bound to an atom or a compound term, so it can
+be handed without type-error to call/1, functor/3 and =../2.
     \predicate{ground}{1}{+Term}
 Succeeds if \arg{Term} holds no free variables.
 \end{description}
