@@ -82,6 +82,7 @@ suggest predicates from a keyword.
 \predicatesummary{call}{[2..]}{Call with additional arguments}
 \predicatesummary{call_shared_object_function}{2}{UNIX:  Call C-function in shared (.so) file}
 \predicatesummary{call_with_depth_limit}{3}{Prove goal with bounded depth}
+\predicatesummary{callable}{1}{Test for atom or compound term}
 \predicatesummary{catch}{3}{Call goal, watching for exceptions}
 \predicatesummary{char_code}{2}{Convert between atom and ASCII value}
 \predicatesummary{char_conversion}{2}{Provide mapping of input characters}
